# ichack-26

./: .env.example  .env.test  .gitignore  .live_state.json  LICENSE  README.md  USAGE.md  autocomplete.ps1  autocomplete.sh  autocomplete.zsh  clam.sh  demo.webm  install.sh  main.py  requirements.txt  run_tests.sh  test-run.ps1
.github/workflows/: test.yml
ai-terminal/: .gitignore  README.md  config.example.json  index.html  install-linux.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ai-terminal/src/: App.tsx  main.tsx
ai-terminal/src-tauri/: Cargo.toml  tauri.conf.json
ai-terminal/src-tauri/icons/: icon.icns
ai-terminal/src-tauri/src/: cache.rs  config.rs  context.rs  fep.rs  harm.rs  lib.rs  main.rs  pty.rs  safeguard.rs  usage.rs
ai-terminal/src-tauri/src/capabilities/: default.json
ai-terminal/src-tauri/src/llm/: client.rs  mod.rs  prompt.rs  providers.rs
ai-terminal/src-tauri/src/tests/: config_tests.rs  context_tests.rs  harm_tests.rs  mod.rs  safeguard_tests.rs  usage_tests.rs
ai-terminal/src/components/: FixSuggestion.tsx  GhostText.tsx  (+5 more)
docs/: index.html  install.ps1  install.sh
logs/: .gitkeep
src/: __init__.py  agent.py  config.py  evolution.py  game.py  grid.py  live_state.py  llm.py  shapes.py  simulation.py  tournament.py
tests/: __init__.py  test_autocomplete.bats  test_autocomplete.ps1  test_clam.bats  test_evolution.py  test_final_verification.sh  test_game.py  test_harm_basic.sh  test_harm_detection.sh  test_harm_warning.sh  test_rm.sh
viz/: __init__.py  components.py  dashboard.py
(+9 files in other folders)
