[package]
name = "ai-terminal"
version = "0.1.0"
description = "AI-powered terminal with inline autocomplete"
authors = ["AI Terminal Team"]
edition = "2021"

[lib]
name = "ai_terminal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
portable-pty = "0.8"
dirs = "5"
md5 = "0.7"
chrono = "0.4"
regex-lite = "0.1"

[target.'cfg(windows)'.dependencies]
hide_console = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
